# SimpleSearchEngine

./: .gitignore  CMakeLists.txt  README.md
lib/: CMakeLists.txt
lib/Index/: CMakeLists.txt  Index.cpp  Index.hpp
lib/Parser/: CMakeLists.txt  Parser.cpp  Parser.hpp
lib/QtGUI/: CMakeLists.txt  IndexWindow.cpp  IndexWindow.hpp
lib/Search/: CMakeLists.txt  Search.cpp  Search.hpp
proto/: .pb.cc  .pb.h  .proto  CMakeLists.txt
